--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,15 @@
         <item>BELUM KAWIN</item>
         <item>KAWIN</item>
     </string-array>
+
+    <string-array name="agama_array">
+        <item>ISLAM</item>
+        <item>KRISTEN</item>
+        <item>KATOLIK</item>
+        <item>HINDU</item>
+        <item>BUDHA</item>
+        <item>KONGHUCU</item>
+    </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
