--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">E-Kapeka Disnaker</string>
+    <string name="app_name">E-KAPEKA Disnaker</string>
 
     <string name="pegawai">Pilih Jenis Kelamin</string>
 
@@ -21,6 +21,7 @@
     <string-array name="kawin_array">
         <item>BELUM KAWIN</item>
         <item>KAWIN</item>
+        <item>CERAI</item>
     </string-array>
 
     <string-array name="agama_array">
