--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">E-KAPEKA Disnaker</string>
+    <string name="app_name">E-KAPEKA</string>
 
     <string name="pegawai">Pilih Jenis Kelamin</string>
 
