--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,14 @@
         <item>BUDHA</item>
         <item>KONGHUCU</item>
     </string-array>
+
+    <string-array name="gaji_array">
+        <item>Kurang/sama dengan Rp. 1.000.000 </item>
+        <item>Antara Rp. 1.000.000 hingga Rp. 2.500.000</item>
+        <item>Antara Rp. 2.500.000 hingga Rp. 5.000.000</item>
+        <item>Diatas Rp. 5.000.000</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
