api peminatan data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,12 @@
         <item>Diatas Rp. 5.000.000</item>
     </string-array>
 
+    <string-array name="lokasi_array">
+        <item>Dalam Negeri - Dalam Tempat Tinggal</item>
+        <item>Dalam Negeri - Luar Tempat Tinggal</item>
+        <item>Luar Negeri</item>
+    </string-array>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
